--- a/src/locales/zh/translation.json
+++ b/src/locales/zh/translation.json
@@ -377,5 +377,6 @@
   "Node Role": "节点角色",
   "DEL_RESOURCE_TIPS": "确定要删除 {{resource_ids}} ?",
 
-  "kubeconfig desc": "用于配置集群间访问的文件，在 Kubernetes 环境 “~/.kube/config” 查看"
+  "kubeconfig desc": "用于配置集群间访问的文件，在 Kubernetes 环境 “~/.kube/config” 查看",
+  "Please select one repo": "请选择一个仓库"
 }
