--- a/src/locales/zh/translation.json
+++ b/src/locales/zh/translation.json
@@ -242,7 +242,7 @@
   "Selected": "已选中",
 
   "No search data": "没有相关搜索结果！",
-  "Guide": "指导",
+  "Guide": "说明",
   "Create Repo explain": "在OpenPitrix中，部署的每个应用程序都是基础软件包存储库，换句话说，如果要将OpenPitrix用于多云应用程序管理器，则需要先创建存储库。应用程序管理器可以将包存储到http / https服务器或S3对象存储。",
   "Create Runtime explain": "环境是云服务商，它可以是AWS、GCE、QingCloud、Kubernetes、OpenStack、VMware VSphere等，让OpenPitrix有权限访问这些云服务商，OpenPitrix将管理所有这些应用程序。",
   "Deploy App explain": "OpenPitrix将应用程序部署到任何云服务商，它非常简单，选择想要部署的应用程序，然后选择环境（云服务商），最后按下确定按钮。这样就完成了。",
@@ -366,8 +366,8 @@
   "StatefulSets": "有状态副本集",
   "DaemonSets": "守护进程集",
 
-  "Back to user": "切换为普通用户",
-  "Back to developer": "切换为开发者",
+  "Back to user": "普通用户",
+  "Back to developer": "开发中心",
   "Document": "文档",
 
   "Already create new version": "已创建新版本",
