--- a/src/locales/zh/translation.json
+++ b/src/locales/zh/translation.json
@@ -272,7 +272,7 @@
   "Tickets": "优惠卷",
   "Notifications": "通知",
   "Service Status": "服务状态",
-  "All Users": "所有用户",
+  "All Users": "全部用户",
   "User Groups": "用户分组",
   "Policy": "政策",
   "SSH Keys": "SSH密钥",
@@ -285,6 +285,7 @@
   "Administrator": "管理员",
   "Developer": "开发者",
   "Normal User": "普通用户",
+  "Permission and Policy": "权限与策略",
   "Email": "邮箱",
   "delete_user_desc": "您确定要删除该用户吗?",
   "Organization": "机构",
@@ -315,6 +316,10 @@
   "App Store": "应用商店",
   "Purchased": "已部署应用",
   "My runtimes": "我的环境",
+  "APP_STORE_DESC": "Openpitrix 官方商店，有{{total}}款应用。",
+  "PURCHASED_DESC": "所有你购买过的应用都会展示在此，包括应用对应的实例。",
+  "MY_RUNTIMES_DESC": "平台同时支持多种云环境，可以在这里进行统一管理。",
+  "UPGRADE_PROVIDER": "升级成为「应用提供商」",
 
   "creat_new_app": "创建新应用程序",
   "creat_new_version": "创建新版本",
