fix:  Add repo validate
fix: Create user remove default role

fix: The vxnet list is incomplete

--- a/src/locales/zh/translation.json
+++ b/src/locales/zh/translation.json
@@ -211,6 +211,7 @@
   "Search Repo": "搜索仓库",
   "Trigger indexer": "触发索引器",
   "Runtime Selectors": "环境选择器",
+  "URL": "网址",
   "Event Id": "事件ID",
   "successful": "已成功",
   "Successful": "已成功",
