fix: Resolve code review issues

--- a/src/locales/zh/translation.json
+++ b/src/locales/zh/translation.json
@@ -410,6 +410,7 @@
   "Deploy app successfully": "部署应用成功",
   "Invalid config file, failed to render page": "无效的配置文件，无法渲染页面",
 
+  "QingCloud App Center": "QingCloud 应用中心",
   "My dashboard": "我的工作台",
   "App service provider ISV": "应用服务商ISV",
   "Work list": "工单",
