feat: Add new style navigation menu (#509)

--- a/src/locales/zh/translation.json
+++ b/src/locales/zh/translation.json
@@ -272,7 +272,7 @@
   "Tickets": "优惠卷",
   "Notifications": "通知",
   "Service Status": "服务状态",
-  "All Users": "所有用户",
+  "All Users": "全部用户",
   "User Groups": "用户分组",
   "Policy": "政策",
   "SSH Keys": "SSH密钥",
@@ -285,6 +285,7 @@
   "Administrator": "管理员",
   "Developer": "开发者",
   "Normal User": "普通用户",
+  "Permission and Policy": "权限与策略",
   "Email": "邮箱",
   "delete_user_desc": "您确定要删除该用户吗?",
   "Organization": "机构",
@@ -312,8 +313,13 @@
   "Attach": "绑定",
   "Detach": "解绑",
 
+  "App Store": "应用商店",
   "Purchased": "已部署应用",
   "My runtimes": "我的环境",
+  "APP_STORE_DESC": "Openpitrix 官方商店，有{{total}}款应用。",
+  "PURCHASED_DESC": "所有你购买过的应用都会展示在此，包括应用对应的实例。",
+  "MY_RUNTIMES_DESC": "平台同时支持多种云环境，可以在这里进行统一管理。",
+  "UPGRADE_PROVIDER": "升级成为「应用提供商」",
 
   "creat_new_app": "创建新应用程序",
   "creat_new_version": "创建新版本",
@@ -376,6 +382,8 @@
 
   "Back to user": "普通用户",
   "Back to developer": "开发中心",
+  "App Center": "应用中心",
+  "Develop Center": "开发中心",
   "Document": "文档",
 
   "Already create new version": "已创建新版本",
@@ -400,5 +408,34 @@
   "Version should not be empty": "版本不能为空",
   "Runtime should not be empty": "运行环境不能为空",
   "Deploy app successfully": "部署应用成功",
-  "Invalid config file, failed to render page": "无效的配置文件，无法渲染页面"
+  "Invalid config file, failed to render page": "无效的配置文件，无法渲染页面",
+
+  "QingCloud App Center": "QingCloud 应用中心",
+  "My dashboard": "我的工作台",
+  "App service provider ISV": "应用服务商ISV",
+  "Work list": "工单",
+  "Financial Center": "财务中心",
+  "Message and monitoring": "消息与监控",
+  "Settings": "设置",
+  "Create app": "创建新应用",
+  "View all": "查看全部",
+  "Global search": "全局搜索",
+  "Alarms": "告警",
+  "My news": "我的消息",
+  "My account": "我的帐户",
+  "Version management": "版本管理",
+  "Audit record": "审核记录",
+  "App information": "应用信息",
+  "Operation and maintenance": "运维",
+  "Monitor": "监控",
+  "Event": "事件",
+  "Customer": "客户",
+  "News": "消息",
+  "Sandbox": "沙盒",
+  "Example": "实例",
+  "Environment": "环境",
+  "Account info": "账户信息",
+  "Change Password": "修改密码",
+  "Notice settings": "通知设置",
+  "Payment": "支付"
 }
