--- a/src/locales/zh/apps.json
+++ b/src/locales/zh/apps.json
@@ -80,11 +80,18 @@
   "STEPPER_FOOTER_CREATE_APP_3": "以上信息调整之后将会自动更新配置文件中的对应内容。",
   "LINK_STEPPER_FOOTER_CREATE_APP_2": "《Helm 规范及应用开发》。",
 
-  "icon_format_note": "图标最佳格式为 png/svg，请重新上传",
+  "icon_format_note": "图标最佳格式为 png，请重新上传",
   "Search result is empty": "搜索结果为空",
   "No result for search word": "没有找到与关键字 「{{searchWord}}」 相关的应用",
   "File": "文件",
   "Successful upload": "上传成功",
+
+  "version_type_vmbase": "VM",
+  "version_type_helm": "Helm",
+  "version_type_saas": "SaaS",
+  "version_type_api": "API",
+  "version_type_native": "Native",
+  "version_type_serveless": "Serveless",
 
   "Go on": "继续",
   "Done": "完成"
