--- a/src/locales/zh/translation.json
+++ b/src/locales/zh/translation.json
@@ -292,13 +292,15 @@
   "Group": "团队",
   "Search users": "搜索用户",
 
+  "Personal Center": "个人中心",
   "Settings": "设置",
   "Basic setting": "基本设置",
+  "Language setting": "语言设置",
   "Change Password": "修改密码",
   "User Name": "用户名称",
   "Current Password": "当前密码",
   "New Password": "新密码",
-  "Confirm New Password": "确认新密码",
+  "Confirm Password": "确认新密码",
   "Modify": "修改",
   "Create SSH Key": "创建SSH密钥",
   "Public Key": "公钥",
@@ -409,7 +411,7 @@
   "Sandbox": "沙盒",
   "Example": "实例",
   "Environment": "环境",
-  "Account info": "账户信息",
+  "Account Info": "账户信息",
   "Change Password": "修改密码",
   "Notice settings": "通知设置",
   "Payment": "支付",
