--- a/src/locales/zh/apps.json
+++ b/src/locales/zh/apps.json
@@ -157,7 +157,12 @@
   "Test Runtime": "测试环境",
   "Instance Name ID": "实例名称 ID",
   "Create Time": "创建时间",
-  "": "",
-  "": "",
-  "": ""
+  "App Info": "应用信息",
+  "Base Info": "基本信息",
+  "Instructions": "使用说明",
+  "Terms of service": "服务条款",
+  "Select file": "选择文件",
+
+  "preview": "预览"
+
 }
