--- a/src/locales/zh/translation.json
+++ b/src/locales/zh/translation.json
@@ -433,5 +433,37 @@
 
   "Scaling": "正在扩容",
   "Testing env": "测试环境",
-  "Not support currently": "暂不支持"
+  "Not support currently": "暂不支持",
+  "Authorization info": "授权信息",
+  "TIPS_NOT_ADD_ENV": "你还没有添加过 {{env}} 的测试环境",
+  "No env": "没有环境",
+  "Add new env": "添加新环境",
+  "Switch authorization info": "切换授权信息",
+  "Add authorization info": "添加授权信息",
+  "Add runtime": "添加环境",
+
+  "STEPPER_NAME_CREATE_RUNTIME_HEADER": "创建测试环境 {{activeStep}}/{{steps}}",
+  "STEPPER_TITLE_CREATE_RUNTIME_1": "提供环境授权信息",
+  "STEPPER_TITLE_CREATE_RUNTIME_2": "设置环境信息",
+  "STEPPER_HEADER_CREATE_RUNTIME_2": "「提供环境授权信息」",
+  "STEPPER_FOOTER_CREATE_RUNTIME_1": "关于授权信息的保密与安全问题请参看",
+  "LINK_STEPPER_FOOTER_CREATE_RUNTIME_1": "《平台服务条款》",
+  "STEPPER_FOOTER_CREATE_RUNTIME_2": "关于授权信息的保密与安全问题请参看",
+  "LINK_STEPPER_FOOTER_CREATE_RUNTIME_2": "《平台服务条款》",
+  "Verify": "验证",
+  "How to get these tips?": "如何获得这些信息？",
+
+  "Validating": "信息验证中..",
+  "invalid url": "错误的URL",
+  "invalid provider": "错误的提供商",
+  "access key and secret key should not be empty": "请填写完整的访问密钥和私钥",
+  "Validate successfully": "信息验证成功",
+  "Set name": "设置名称",
+
+  "Modify authorization info": "修改授权信息",
+  "Delete authorization info": "删除授权信息",
+  "DELETE_RUNTIME_CONFIRM": "确认删除该环境吗?",
+
+  "DELETE_AUTH_INFO_CONFIRM": "确认删除该授权信息吗?"
+
 }
