--- a/src/locales/zh/apps.json
+++ b/src/locales/zh/apps.json
@@ -85,6 +85,7 @@
   "LINK_STEPPER_FOOTER_ADD_APP_VERSION_1": "《Helm 规范及应用开发》。",
 
   "icon_format_note": "图标最佳格式为 png，请重新上传",
+  "screenshot_format_note": "界面截图最佳格式为 png/jpg ，请重新上传",
   "Search result is empty": "搜索结果为空",
   "No result for search word": "没有找到与关键字 「{{searchWord}}」 相关的应用",
   "File": "文件",
@@ -163,6 +164,6 @@
   "Terms of service": "服务条款",
   "Select file": "选择文件",
 
-  "preview": "预览"
+  "Preview": "预览"
 
 }
