--- a/src/locales/zh/translation.json
+++ b/src/locales/zh/translation.json
@@ -442,7 +442,7 @@
   "Add authorization info": "添加授权信息",
   "Add runtime": "添加环境",
 
-  "STEPPER_NAME_CREATE_RUNTIME_HEADER": "创建测试环境 {{activeStep}}/{{steps}}",
+  "STEPPER_NAME_CREATE_RUNTIME_HEADER": "添加测试环境 {{activeStep}}/{{steps}}",
   "STEPPER_TITLE_CREATE_RUNTIME_1": "提供环境授权信息",
   "STEPPER_TITLE_CREATE_RUNTIME_2": "设置环境信息",
   "STEPPER_HEADER_CREATE_RUNTIME_2": "「提供环境授权信息」",
@@ -463,7 +463,11 @@
   "Modify authorization info": "修改授权信息",
   "Delete authorization info": "删除授权信息",
   "DELETE_RUNTIME_CONFIRM": "确认删除该环境吗?",
+  "DELETE_AUTH_INFO_CONFIRM": "确认删除该授权信息吗?",
+  "Backlog": "备注",
+  "Please validate env auth info": "请验证授权信息",
+  "Auth info name is empty": "授权信息名称为空",
 
-  "DELETE_AUTH_INFO_CONFIRM": "确认删除该授权信息吗?"
+  "Delete runtime successfully": "删除环境成功"
 
 }
