feat: Add new admin review pages

--- a/src/locales/zh/translation.json
+++ b/src/locales/zh/translation.json
@@ -389,7 +389,7 @@
 
   "QingCloud App Center": "QingCloud 应用中心",
   "My dashboard": "我的工作台",
-  "App service provider ISV": "应用服务商ISV",
+  "App service provider": "应用服务商",
   "Work list": "工单",
   "Financial Center": "财务中心",
   "Message and monitoring": "消息与监控",
