feat: Create testing runtime and runtime credential (#579)
* refactor store singleton cross ref

* Add runtime ops for vm and helm type

* Add runtime credential ops

* fix: Side nav menu filter with role

fix #571

--- a/src/locales/zh/translation.json
+++ b/src/locales/zh/translation.json
@@ -431,5 +431,65 @@
   "Collapse": "收起",
   "None": "无",
 
-  "Scaling": "正在扩容"
+  "Scaling": "正在扩容",
+  "Testing env": "测试环境",
+  "Not support currently": "暂不支持",
+  "Authorization info": "授权信息",
+  "TIPS_NOT_ADD_ENV": "你还没有添加过 {{env}} 的测试环境",
+  "No env": "没有环境",
+  "Add new env": "添加新环境",
+  "Switch authorization info": "切换授权信息",
+  "Add authorization info": "添加授权信息",
+  "Add runtime": "添加环境",
+
+  "STEPPER_NAME_CREATE_RUNTIME_HEADER": "添加测试环境 {{activeStep}}/{{steps}}",
+  "STEPPER_TITLE_CREATE_RUNTIME_1": "提供环境授权信息",
+  "STEPPER_TITLE_CREATE_RUNTIME_2": "设置环境信息",
+  "STEPPER_HEADER_CREATE_RUNTIME_2": "「提供环境授权信息」",
+  "STEPPER_FOOTER_CREATE_RUNTIME_1": "关于授权信息的保密与安全问题请参看",
+  "LINK_STEPPER_FOOTER_CREATE_RUNTIME_1": "《平台服务条款》",
+  "STEPPER_FOOTER_CREATE_RUNTIME_2": "关于授权信息的保密与安全问题请参看",
+  "LINK_STEPPER_FOOTER_CREATE_RUNTIME_2": "《平台服务条款》",
+  
+  "STEPPER_NAME_CREATE_CREDENTIAL_HEADER": "添加授权信息 {{activeStep}}/{{steps}}",
+  "STEPPER_TITLE_CREATE_CREDENTIAL_1": "提供环境授权信息",
+  "STEPPER_TITLE_CREATE_CREDENTIAL_2": "设置名称、备注",
+  "STEPPER_HEADER_CREATE_CREDENTIAL_2": "「提供环境授权信息」",
+  "STEPPER_FOOTER_CREATE_CREDENTIAL_1": "关于授权信息的保密与安全问题请参看",
+  "LINK_STEPPER_FOOTER_CREATE_CREDENTIAL_1": "《平台服务条款》",
+  "STEPPER_FOOTER_CREATE_CREDENTIAL_2": "关于授权信息的保密与安全问题请参看",
+  "LINK_STEPPER_FOOTER_CREATE_CREDENTIAL_2": "《平台服务条款》",
+  
+  "Verify": "验证",
+  "How to get these tips?": "如何获得这些信息？",
+
+  "Validating": "信息验证中..",
+  "invalid url": "错误的URL",
+  "invalid provider": "错误的提供商",
+  "access key and secret key should not be empty": "请填写完整的访问密钥和私钥",
+  "Validate successfully": "信息验证成功",
+  "Set name": "设置名称",
+
+  "Modify authorization info": "修改授权信息",
+  "Delete authorization info": "删除授权信息",
+  "DELETE_RUNTIME_CONFIRM": "确认删除该环境吗?",
+  "DELETE_AUTH_INFO_CONFIRM": "确认删除该授权信息吗?",
+  "Backlog": "备注",
+  "Please validate runtime credential": "请验证授权信息",
+  "Auth info name is empty": "授权信息名称为空",
+
+  "Delete runtime successfully": "删除环境成功",
+
+  "You can": "你可以",
+  "Choose from already saved resource": "从已添加的当中选择：",
+  "Or": "或者",
+  "Newly create": "添加全新的...",
+
+  "Credential name is empty": "授权信息名称为空",
+  "Saved runtime credential successfully": "授权信息添加成功",
+  "Please select runtime zone": "请选择环境区域",
+  "Runtime name is empty": "环境名称为空",
+  "Modify runtime credential successfully": "修改授权信息成功",
+  "Delete runtime credential successfully": "删除授权信息成功"
+
 }
