--- a/src/locales/zh/apps.json
+++ b/src/locales/zh/apps.json
@@ -151,19 +151,21 @@
   "APP_DELIVERY_MODES_EXPLAIN": "每个应用可支持多种交付方式，每种交付方式的版本是相互独立的。",
   "Not added": "未添加",
   "optional": "可选",
-  "fileConfig": "配置文件",
-  "setPrice": "定价",
-  "updateLog": "更新日志",
+  "Config File": "配置文件",
+  "Set Price": "定价",
+  "Update Log": "更新日志",
 
   "Test Runtime": "测试环境",
   "Instance Name ID": "实例名称 ID",
   "Create Time": "创建时间",
+
   "App Info": "应用信息",
   "Base Info": "基本信息",
   "Instructions": "使用说明",
   "Terms of service": "服务条款",
   "Select file": "选择文件",
 
-  "Preview": "预览"
-
+  "Preview": "预览",
+  "Processed": "已处理",
+  "Unprocessed": "未处理"
 }
