fix: Get current platform when refresh page
Add helm type runtime creation

--- a/src/locales/zh/translation.json
+++ b/src/locales/zh/translation.json
@@ -490,6 +490,7 @@
   "Please select runtime zone": "请选择环境区域",
   "Runtime name is empty": "环境名称为空",
   "Modify runtime credential successfully": "修改授权信息成功",
-  "Delete runtime credential successfully": "删除授权信息成功"
-
+  "Delete runtime credential successfully": "删除授权信息成功",
+  "invalid kebeconfig": "错误的kubeconfig",
+  "Helm runtime namespace is empty": "命名空间为空"
 }
