--- a/src/locales/zh/translation.json
+++ b/src/locales/zh/translation.json
@@ -502,5 +502,8 @@
 
   "STEPPER_NAME_CREATE_PROVIDER_HEADER": "成为认证服务商",
   "STEPPER_TITLE_CREATE_PROVIDER_1": "提交认证信息",
-  "STEPPER_FOOTER_CREATE_PROVIDER_1": "以上是平台审核的重要信息，请准确填写。"
+  "STEPPER_FOOTER_CREATE_PROVIDER_1": "以上是平台审核的重要信息，请准确填写。",
+
+  "Selected runtime": "所选环境",
+  "App / Delivery type / Version": "所属应用、交付方式、版本"
 }
