feat: Create and modify category
Remove useless files

--- a/src/locales/zh/translation.json
+++ b/src/locales/zh/translation.json
@@ -77,7 +77,7 @@
   "Category": "分类",
   "View detail": "查看详情",
   "Deploy App": "部署应用",
-  "Modify category": "修改分类",
+  "Modify category": "编辑分类",
 
   "Delete": "删除",
   "Search App": "搜索应用",
