--- a/src/locales/zh/apps.json
+++ b/src/locales/zh/apps.json
@@ -184,5 +184,10 @@
   "STEPPER_TITLE_VERSION_SUBMIT_CHECK_2": "检查版本信息",
   "STEPPER_FOOTER_VERSION_SUBMIT_CHECK_2": "版本号以及版本的更新日志都是重要的信息。",
   "STEPPER_HEADER_VERSION_SUBMIT_CHECK_2": "「检查应用信息」",
-  "": ""
+
+  "Please input the reason for reject": "请您填写拒绝原因",
+
+  "ISV_REVIEW_PASS": "应用服务商审核通过了该应用版本",
+  "BUSINESS_ADMIN_REVIEW_PASS": "平台商务审核通过了该应用版本",
+  "DEVELOP_ADMIN_REVIEW_PASS": "平台技术审核审核通过了该应用版本"
 }
